2011-03-05  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * POTFILES.in: Add geanyPG to list translatable files.


2011-01-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * de.po: Minor adjustment on translation.


2011-01-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * de.po: Update of German translation based on review by Dominic Hopf.


2011-01-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * pt.po: Update of Portuguese translation. Thanks to André Glória.
 * de.po: Update of German translation.


2010-12-29  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * es.po: Update of Spanish translation provided by Lucas Vieites. Thanks.


2010-12-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * de.po: Update of German translation.


2010-12-24  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * ja.po: Update of Japanese translation. Thanks to Masami Chikahiro.


2010-12-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * *.po: Update of po files for string freeze of geany-plugins 0.20.


2010-12-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * es.po: Update of Spanish translation provided by Lucas Vieites. Thanks.
 * tr.po: Update of Turkish translation. Thanks to Gürkan Gür.


2010-11-21  Frank Lanitz  <frank@frank.uvena.de>

 * de.po: Update of German translation for newly added GeanyLaTeX strings.


2010-11-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * de.po: Minor update of German translation.


2010-10-23  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * de.po: Minor update of German translation.


2010-10-08  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * de.po: Update of German translation.


2010-09-13  Frank Lanitz  <frank@frank.uvena.de>

 * de.po: Update of German translation for BibTeX entries.


2010-08-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * de.po: Minor update of German translation.


2010-08-23  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
