@@ -1,3 +1,8 @@
+2011-03-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * POTFILES.in: Add devhelp plugin to list of translatable files.
+
+
 2011-03-05  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * POTFILES.in: Add geanyPG to list translatable files.
